emote page navigation added

--- a/popup/popup-stylesheet.css
+++ b/popup/popup-stylesheet.css
@@ -134,11 +134,11 @@ body{
   background-color: green;
 }
 
-.page {
+.emote-page, .emoji-page {
   display: none;
 }
 
-.page:nth-child(1) {
+.emote-page:nth-child(1), .emoji-page:nth-child(1) {
   display: block;
 }
 
