--- a/popup/popup-stylesheet.css
+++ b/popup/popup-stylesheet.css
@@ -62,9 +62,15 @@ body{
 
 .tab {
   cursor: pointer;
+  padding-bottom: 8px;
   text-align: center;
   flex: 1;
   color: salmon;
+}
+
+.selected-tab {
+  color: white;
+  border-bottom: 1px solid salmon;
 }
 
 /* style for emoji table */
@@ -103,7 +109,7 @@ body{
 
 .emoji-button{
   font-size: 20px;
-  width: 64px;
+  width: 65px;
   padding: 5px;
 }
 
