--- a/help-settings-page/help-dictionary-stylesheet.css
+++ b/help-settings-page/help-dictionary-stylesheet.css
@@ -1,8 +1,3 @@
-/* html{
-    padding: 10px;
-    border: solid 2px salmon;
-    background-color: #2c2c2c;
-} */
 body{
     color: whitesmoke;
     margin: 0;
@@ -11,13 +6,15 @@ body{
  
 .translation-x-help{
   padding: 3px;
-  margin-top: 3px;
+  margin-top: 10px;
   display: flex;
   justify-content: space-around;
 }
 
 .help-note{
-  flex-basis: 350px;
+  width: 100%;
+  margin-left: 20px;
+  margin-top: 4px;
 }
 
 .help-note-header{
@@ -38,7 +35,6 @@ body{
 }
 
 table {
-    margin-top: 10px;
     margin-left: 2px;
     text-align: left;
     border-collapse: collapse; 
