bug fix, clear favorites, comments, about us

--- a/help-settings-page/settings-tab-stylesheet.css
+++ b/help-settings-page/settings-tab-stylesheet.css
@@ -44,3 +44,10 @@
   cursor: pointer;
   border: 1px solid #dcdcdc;
 }
+
+#favorites-save-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+}
+
